test/typecheck/errors/bad-views17.boa
o: output sum of int;

v1: table[year: int][projectID: string][fileName: string] of temp:int;

r1: v1._row;

while (v1 >> r1 >> r1) {
	o << 1;
}
